<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CompetitiveColours</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start_server">Host a Game</string>
    <string name="button_search_for_devices">Refresh Game List</string>
    <string name="toggle_bluetooth_off">Bluetooth Disabled</string>
    <string name="toggle_bluetooth_on">Bluetooth Enabled</string>
    <string name="warning_bluetooth_unsupported">Your device does not support Bluetooth</string>
    <string name="device_list_title">Devices found:</string>
    <string name="button_red">R</string>
    <string name="button_green">G</string>
    <string name="button_blue">B!</string>
    <string name="button_yellow">y..</string>
    <string name="action_restart">Restart...</string>
    <string name="button_start_game">LAUNCH!</string>
    <string name="client_list_title">Connected players...</string>
    <string name="select_game_type">Select game type...</string>
    <string name="select_game_duration">Select game length...</string><string name="player_name">Player name...</string>
    <string-array name="game_type_list">
        <item>Simon</item>
        <item>King of the Hue</item>
        <item>Sandbox</item>
    </string-array>
    <string-array name="game_duration_list">
        <item>60s</item>
        <item>120s</item>
        <item>300s</item>
    </string-array>
</resources>
