<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:weightSum="10">

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="30dp"
            android:checked="false"
            android:textOn="@string/toggle_bluetooth_on"
            android:textOff="@string/toggle_bluetooth_off"
            android:layout_centerHorizontal="true"
            android:id="@+id/toggle_bluetooth_enabled" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_start_server"
                android:id="@+id/button_start_server"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/primary_text_light" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_search_for_devices"
                android:id="@+id/button_search_for_devices"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/primary_text_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/device_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device_list_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device_list_time_elapsed" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/device_list">
            </ListView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>