<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="uk.wycor.competitivecolours.app.GameActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:text="@string/button_red"
            android:id="@+id/button_red" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:text="@string/button_green"
            android:id="@+id/button_green" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:text="@string/button_blue"
            android:id="@+id/button_blue" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:text="@string/button_yellow"
            android:id="@+id/button_yellow" />
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/dummy_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
