<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:weightSum="10">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|bottom"
            android:layout_weight="1"
            android:weightSum="2">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_game_type"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|top"
                android:spinnerMode="dropdown"
                android:prompt="@string/select_game_type"
                android:entries="@array/game_type_list"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_game_duration"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|top"
                android:spinnerMode="dropdown"
                android:prompt="@string/select_game_duration"
                android:entries="@array/game_duration_list"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">
            <TextView
                android:text="@string/client_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device_list_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device_list_time_elapsed" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/client_list">
            </ListView>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/button_start_game"
            android:id="@+id/button_start_game"
            android:textColor="@android:color/primary_text_light"
            android:layout_weight="0.5" />

    </LinearLayout>

</RelativeLayout>